[package]
name = "magic"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
wasm-logger = "0.2.0"
lazy_static = "1.4"
async-std = "1.12.0"
flutter_rust_bridge = "=1.48"
once_cell = "1.15.0"
anyhow = { version = "1.0.64", features = ["backtrace"] }